--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Frontend Dependencies
-        run: npm ci
-
+        run: npm install
+        
       - name: Build Frontend
         run: npm run build
 
